metadata/force-app/main/default/objects/CustomName_IeiMM__c/CustomName_IeiMM__c.object-meta.xml
<CustomObject>
    <description>Description_WQiTO</description>
    <label>CustomLabel_nskhA</label>
    <nameField>
        <label>CustomLabel_nskhA</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_nskhAs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>