metadata/force-app/main/default/objects/CustomName_IeiMM__c/fields/CustomField_osUqD__c.field-meta.xml
<CustomField>
    <fullName>CustomField_osUqD__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldBOkyC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>