metadata/force-app/main/default/objects/CustomName_IeiMM__c/fields/CustomField_VcRJv__c.field-meta.xml
<CustomField>
    <fullName>CustomField_VcRJv__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldrmvPi</label>
    <length>255</length>
    <type>Text</type>
</CustomField>